--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   --bg-color: #333333;
   --text-color: #ffffff;
   --hr-color: white;
-  --bg-image: url("src/assets/images/pexels-pixabay-15239.jpg");
+  --bg-image: url("../src/assets/images/pexels-pixabay-15239.jpg");
   --border-pixel: 1px;
 }
 
@@ -10,6 +10,6 @@
   --bg-color: #ffffff;
   --text-color: #222222;
   --hr-color: #ffffff;
-  --bg-image: url("src/assets/images/BackgroundImage.jpg");
+  --bg-image: url("../src/assets/images/BackgroundImage.jpg");
   --border-pixel: 2px;
 }
