--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100vh;
   background-image: var(--bg-image);
+  background-color: black;
   background-repeat: no-repeat;
   background-size: cover;
   color: var(--text-color);
