--- a/src/components/searchData/searchData.css
+++ b/src/components/searchData/searchData.css
@@ -10,6 +10,7 @@
     var(--bg-image);
     background-repeat: no-repeat;
     background-size: cover;
+    background-color: black;
   color: white;
 }
 
